Added Clock Assets
Added assets and locking the webpage to a 16:9 ratio

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body {
-    background-color: #FFFDD0; /* Cream color */
+    background-color: #000000; /* Cream color */
+}
+
+h1 {
+    color: #FFFDD0; /* Cream color */
 }
